# AIVoxPlay

./: .gitignore  LICENSE  README.md
aivoxplay/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
aivoxplay/src/aivoxplay.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aivoxplay/src/aivoxplay/chat/: base.py  naive.py
aivoxplay/src/aivoxplay/deploy/: deploy_runpod.py
aivoxplay/src/aivoxplay/sts/server/: agent.py  echo.py
aivoxplay/src/aivoxplay/stt/: core.py  faster_whisper_model_aliases.json  websocket.py
aivoxplay/src/aivoxplay/stt/helper/: realtime.py  ws.py
aivoxplay/src/aivoxplay/stt/providers/: custom.py  openai.py
aivoxplay/src/aivoxplay/tts/: base.py  engine.py  factory.py  openai_client.py  orpheus.py  pipeline.py
aivoxplay/src/aivoxplay/utils/: tts.py
examples/: README.md  agent_server.py  client.html  echo_server.py  orpheus.py  orpheus_stream.py  start_vllm.py  stream_server.py  stream_server_queue.py  stream_voice.py  sts_client.html  sts_server.py  stt_proxy_ws.py  test.py
examples/runpod/: runpod_configs.py
examples/stt/: client_stt.html  stt_server.py
examples/tts/: orpheus.py  stream_queue_client.html  stream_server.py  stream_server_openai.py
