[project]
name = "aivoxplay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "runpod>=1.7.13",
    "torch==2.2.2",
    "numpy==1.26.4",
    "soundfile",
    "transformers",
    "openai>=1.97.1",
    "snac>=1.2.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
